--- a/public/css/styleOriginal.css
+++ b/public/css/styleOriginal.css
@@ -5197,6 +5197,14 @@ _____________________________________________________*/
     grid-template-columns: repeat(4,1fr);
 }
 
+
+/*Validacion contraseña*/
+.validacion {
+    margin-left: 33px;
+    padding-bottom: 10px;
+    margin-top: -30px;
+}
+
 /*//////////////////////////////////////////////////////////////////////////////////////////////*/
 
 
