--- a/public/css/app.css
+++ b/public/css/app.css
@@ -62,7 +62,7 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #f2f2f2da;
+  background-color: #f8fafc;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -106,6 +106,7 @@ ol,
 ul,
 dl {
   margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 ol ol,
@@ -592,7 +593,7 @@ pre code {
   position: relative;
   width: 100%;
   padding-right: 15px;
-  padding-left: 90px;
+  padding-left: 15px;
 }
 
 .col {
@@ -1653,7 +1654,7 @@ pre code {
 .table th,
 .table td {
   padding: 0.75rem;
-  vertical-align: middle;
+  vertical-align: top;
   border-top: 1px solid #dee2e6;
 }
 .table thead th {
@@ -2242,7 +2243,7 @@ textarea.form-control {
 
 .invalid-feedback {
   display: none;
-  /* width: 100%; */
+  width: 100%;
   margin-top: 0.25rem;
   font-size: 80%;
   color: #e3342f;
@@ -2277,7 +2278,7 @@ textarea.form-control {
 .was-validated .form-control:invalid, .form-control.is-invalid {
   border-color: #e3342f;
   padding-right: calc(1.6em + 0.75rem);
-  /* background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23e3342f' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23e3342f' stroke='none'/%3e%3c/svg%3e"); */
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23e3342f' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23e3342f' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.4em + 0.1875rem) center;
   background-size: calc(0.8em + 0.375rem) calc(0.8em + 0.375rem);
@@ -2344,7 +2345,7 @@ textarea.form-control {
 .form-inline .form-check {
   width: 100%;
 }
-@media (min-width: 500px) {
+@media (min-width: 576px) {
   .form-inline label {
     display: flex;
     align-items: center;
@@ -4139,8 +4140,7 @@ input[type=button].btn-block {
     padding-left: 0;
   }
 }
-@media (min-width: 780px) {
-  
+@media (min-width: 992px) {
   .navbar-expand-lg {
     flex-flow: row nowrap;
     justify-content: flex-start;
@@ -4371,7 +4371,6 @@ input[type=button].btn-block {
   border-top: 0;
 }
 
-.card-body-b,
 .card-body {
   flex: 1 1 auto;
   min-height: 1px;
@@ -4560,8 +4559,9 @@ input[type=button].btn-block {
   display: flex;
   flex-wrap: wrap;
   padding: 0.75rem 1rem;
+  margin-bottom: 1rem;
   list-style: none;
-  background-color: #f2f2f2da;
+  background-color: #e9ecef;
   border-radius: 0.25rem;
 }
 
@@ -4572,7 +4572,7 @@ input[type=button].btn-block {
   float: left;
   padding-right: 0.5rem;
   color: #6c757d;
-  content: ">";
+  content: "/";
 }
 .breadcrumb-item + .breadcrumb-item:hover::before {
   text-decoration: underline;
