--- a/public/css/styleOriginal.css
+++ b/public/css/styleOriginal.css
@@ -5132,6 +5132,7 @@ _____________________________________________________*/
 /*___________________________________________________
         Busqueda Principal
 _____________________________________________________*/
+
 .contenido-b{ 
     width: 100%;
 
@@ -5203,6 +5204,13 @@ _____________________________________________________*/
     padding-bottom: 10px;
     margin-top: -30px;
 }
+
+
+/* Mapa */
+
+#map {
+    height: 600px;
+  }
 
 /*//////////////////////////////////////////////////////////////////////////////////////////////*/
 
