Cambios para la mejora de Validaciones

--- a/public/css/style-copy.css
+++ b/public/css/style-copy.css
@@ -2896,6 +2896,11 @@ ________________________________________________________________________________
     display: none;
 }
 
+#distintivo div{
+    display: none;
+}
+
+
 
 .seccion-i {
     width: 50%;
