Actualizacion de estilos

--- a/public/css/styleOriginal.css
+++ b/public/css/styleOriginal.css
@@ -347,7 +347,6 @@ ul.footer_boxs li a:hover{
 .navegadors{
     border-top: black 5px ;
     border-bottom: black 5px;
-    margin-left: -80px;
 }
 
 .slider{
@@ -5472,6 +5471,7 @@ _____________________________________________________*/
 
     .sep-t {
         display: block;
+        height: auto;
     }
 
     .izquierda-11 {
